# mikrotik-travel-router

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  airvpn-ipv6-setup.md  flake.nix  generate-rsc.scm  generate-rsc.sh  wg-to-env.scm  wg-to-env.sh
tests/: import_wireguard.rs
